// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip big size match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <Chip
        className=""
        isActive={false}
        isDisabled={false}
        isFilled={false}
        isFolded={false}
        isOutlined={false}
        isOutlinedColor={false}
        isReadOnly={false}
        isUnfolded={false}
        overrides={{}}
        size="large"
      >
        <div
          className="HoiPoi__Chip__root-4-0 HoiPoi__Chip__large-4-4"
        >
          <div
            className="HoiPoi__Chip__wrapper-4-1"
          >
            <ForwardRef
              className="HoiPoi__Chip__Text-4-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-4-19 HoiPoi__Chip__Text-4-2 HoiPoi__Text__body-4-29"
                style={{}}
              >
                Lorem ipsum
              </span>
            </ForwardRef>
          </div>
        </div>
      </Chip>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Chip default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <Chip
        className=""
        isActive={false}
        isDisabled={false}
        isFilled={false}
        isFolded={false}
        isOutlined={false}
        isOutlinedColor={false}
        isReadOnly={false}
        isUnfolded={false}
        overrides={{}}
        size="small"
      >
        <div
          className="HoiPoi__Chip__root-1-0 HoiPoi__Chip__small-1-3"
        >
          <div
            className="HoiPoi__Chip__wrapper-1-1"
          >
            <ForwardRef
              className="HoiPoi__Chip__Text-1-2"
              isTruncated={false}
              overrides={{}}
              type="caption"
            >
              <span
                className="HoiPoi__Text__root-1-19 HoiPoi__Chip__Text-1-2 HoiPoi__Text__caption-1-31"
                style={{}}
              >
                Lorem ipsum
              </span>
            </ForwardRef>
          </div>
        </div>
      </Chip>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Chip filled variation match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <Chip
        alt="image"
        className=""
        isActive={true}
        isDisabled={false}
        isFilled={true}
        isFolded={true}
        isOutlined={false}
        isOutlinedColor={false}
        isReadOnly={false}
        isUnfolded={false}
        onRemove={[Function]}
        overrides={{}}
        placeholder="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
        size="small"
        src="https://live.staticflickr.com/2862/9899551176_b8c9c7dd30_b.jpg"
      >
        <div
          className="HoiPoi__Chip__root-2-0 HoiPoi__Chip__isFilled-2-16 HoiPoi__Chip__isActive-2-9 HoiPoi__Chip__small-2-3"
        >
          <div
            className="HoiPoi__Chip__wrapper-2-1"
          >
            <Component
              alt="image"
              className="HoiPoi__Chip__avatar-2-5"
              placeholder="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
              size="small"
              src="https://live.staticflickr.com/2862/9899551176_b8c9c7dd30_b.jpg"
              type="round"
            >
              <SingleAvatar
                alt="image"
                className="HoiPoi__Chip__avatar-2-5"
                placeholder="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
                size="small"
                src="https://live.staticflickr.com/2862/9899551176_b8c9c7dd30_b.jpg"
                type="round"
              >
                <div
                  className="HoiPoi__SingleAvatar__root-2-19 HoiPoi__SingleAvatar__round-2-20 HoiPoi__SingleAvatar__small-2-22 HoiPoi__Chip__avatar-2-5"
                >
                  <img
                    alt="image"
                    src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
                  />
                </div>
              </SingleAvatar>
            </Component>
            <ForwardRef
              className="HoiPoi__Chip__Text-2-2"
              isTruncated={false}
              overrides={{}}
              type="caption"
            >
              <span
                className="HoiPoi__Text__root-2-33 HoiPoi__Chip__Text-2-2 HoiPoi__Text__caption-2-45"
                style={{}}
              >
                Lorem ipsum
              </span>
            </ForwardRef>
            <div
              className="HoiPoi__Chip__icons-2-10"
            >
              <Component
                className="HoiPoi__Chip__icon-2-11 HoiPoi__Chip__iconDropdown-2-14 HoiPoi__Chip__iconFolded-2-13"
                key="chip__dropdown"
                name="arrowDropDown"
                size="large"
              >
                <ForwardRef
                  className="HoiPoi__Chip__icon-2-11 HoiPoi__Chip__iconDropdown-2-14 HoiPoi__Chip__iconFolded-2-13"
                  name="arrowDropDown"
                  overrides={{}}
                  size="large"
                >
                  <span
                    className="HoiPoi__Icon__root-2-51 HoiPoi__Icon__large-2-54 HoiPoi__Chip__icon-2-11 HoiPoi__Chip__iconDropdown-2-14 HoiPoi__Chip__iconFolded-2-13"
                    onMouseDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                  >
                    <ArrowDropDown
                      color="#7d8a96"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                          fill="#7d8a96"
                          fillRule="evenodd"
                        />
                      </svg>
                    </ArrowDropDown>
                  </span>
                </ForwardRef>
              </Component>
              <Component
                className="HoiPoi__Chip__icon-2-11 HoiPoi__Chip__dividerIcon-2-15"
                key="chip__divider"
                name="verticalDivider"
                size="small"
              >
                <ForwardRef
                  className="HoiPoi__Chip__icon-2-11 HoiPoi__Chip__dividerIcon-2-15"
                  name="verticalDivider"
                  overrides={{}}
                  size="small"
                >
                  <span
                    className="HoiPoi__Icon__root-2-51 HoiPoi__Icon__small-2-52 HoiPoi__Chip__icon-2-11 HoiPoi__Chip__dividerIcon-2-15"
                    onMouseDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                  >
                    <VerticalDivider
                      color="#7d8a96"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          fill="#7d8a96"
                          height="20"
                          id="Rectangle"
                          rx="1"
                          width="2"
                          x="11"
                          y="2"
                        />
                      </svg>
                    </VerticalDivider>
                  </span>
                </ForwardRef>
              </Component>
              <Component
                className="HoiPoi__Chip__icon-2-11"
                key="chip__close"
                name="closeRaw"
                onClick={[Function]}
                size="raw"
              >
                <ForwardRef
                  className="HoiPoi__Chip__icon-2-11"
                  name="closeRaw"
                  onClick={[Function]}
                  overrides={{}}
                  size="raw"
                >
                  <span
                    className="HoiPoi__Icon__root-2-51 HoiPoi__Icon__raw-2-57 HoiPoi__Icon__clickable-2-58 HoiPoi__Chip__icon-2-11"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                  >
                    <Close
                      color="#7d8a96"
                    >
                      <svg
                        fill="none"
                        height={8}
                        viewBox="0 0 9 8"
                        width={9}
                      >
                        <path
                          clipRule="evenodd"
                          d="M4.69 5.33l2.548 2.546L8.543 6.57 5.997 4.024 8.51 1.51 7.204.204 4.691 2.718 2.177.204.871 1.51l2.514 2.514L.838 6.57l1.306 1.306L4.691 5.33z"
                          fill="#7d8a96"
                          fillRule="evenodd"
                        />
                      </svg>
                    </Close>
                  </span>
                </ForwardRef>
              </Component>
            </div>
          </div>
        </div>
      </Chip>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Chip outlined variation match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <Chip
        alt="image"
        className=""
        isActive={false}
        isDisabled={false}
        isFilled={false}
        isFolded={true}
        isOutlined={true}
        isOutlinedColor={false}
        isReadOnly={true}
        isUnfolded={false}
        onRemove={[Function]}
        overrides={{}}
        placeholder="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
        size="small"
        src="https://live.staticflickr.com/2862/9899551176_b8c9c7dd30_b.jpg"
      >
        <div
          className="HoiPoi__Chip__root-3-0 HoiPoi__Chip__isOutlined-3-17 HoiPoi__Chip__isReadOnly-3-8 HoiPoi__Chip__small-3-3"
        >
          <div
            className="HoiPoi__Chip__wrapper-3-1"
          >
            <Component
              alt="image"
              className="HoiPoi__Chip__avatar-3-5"
              placeholder="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
              size="small"
              src="https://live.staticflickr.com/2862/9899551176_b8c9c7dd30_b.jpg"
              type="round"
            >
              <SingleAvatar
                alt="image"
                className="HoiPoi__Chip__avatar-3-5"
                placeholder="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
                size="small"
                src="https://live.staticflickr.com/2862/9899551176_b8c9c7dd30_b.jpg"
                type="round"
              >
                <div
                  className="HoiPoi__SingleAvatar__root-3-19 HoiPoi__SingleAvatar__round-3-20 HoiPoi__SingleAvatar__small-3-22 HoiPoi__Chip__avatar-3-5"
                >
                  <img
                    alt="image"
                    src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
                  />
                </div>
              </SingleAvatar>
            </Component>
            <ForwardRef
              className="HoiPoi__Chip__Text-3-2"
              isTruncated={false}
              overrides={{}}
              type="caption"
            >
              <span
                className="HoiPoi__Text__root-3-33 HoiPoi__Chip__Text-3-2 HoiPoi__Text__caption-3-45"
                style={{}}
              >
                Lorem ipsum
              </span>
            </ForwardRef>
            <div
              className="HoiPoi__Chip__icons-3-10"
            >
              <Component
                className="HoiPoi__Chip__icon-3-11"
                key="chip__read-only"
                name="lockRaw"
                size="raw"
              >
                <ForwardRef
                  className="HoiPoi__Chip__icon-3-11"
                  name="lockRaw"
                  overrides={{}}
                  size="raw"
                >
                  <span
                    className="HoiPoi__Icon__root-3-51 HoiPoi__Icon__raw-3-57 HoiPoi__Chip__icon-3-11"
                    onMouseDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                  >
                    <Lock
                      color="#7d8a96"
                    >
                      <svg
                        fill="none"
                        height={14}
                        viewBox="0 0 11 14"
                        width={11}
                      >
                        <path
                          clipRule="evenodd"
                          d="M9.333 4.667h-.666V3.333a3.335 3.335 0 00-6.667 0v1.334h-.667C.6 4.667 0 5.267 0 6v6.667C0 13.4.6 14 1.333 14h8c.734 0 1.334-.6 1.334-1.333V6c0-.733-.6-1.333-1.334-1.333zm-4 6C4.6 10.667 4 10.067 4 9.333 4 8.6 4.6 8 5.333 8c.734 0 1.334.6 1.334 1.333 0 .734-.6 1.334-1.334 1.334zm2.067-6H3.267V3.333c0-1.14.926-2.066 2.066-2.066 1.14 0 2.067.926 2.067 2.066v1.334z"
                          fill="#7d8a96"
                          fillRule="evenodd"
                        />
                      </svg>
                    </Lock>
                  </span>
                </ForwardRef>
              </Component>
            </div>
          </div>
        </div>
      </Chip>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
